syntax = "proto3";

package vv.options;

option go_package = "github.com/bluekaki/pkg/vv/options";

import "google/protobuf/descriptor.proto";

message Handler { string name = 1; }

extend google.protobuf.MethodOptions {
  optional bool journal = 74400;
  optional string metrics_alias = 74401;

  optional Handler method_authorization = 74502;
  optional Handler method_proxy_authorization = 74503;
  optional Handler method_whitelisting = 74504;
}

extend google.protobuf.ServiceOptions {
  optional Handler authorization = 74505;
  optional Handler proxy_authorization = 74506;
  optional Handler whitelisting = 74507;
}

extend google.protobuf.FieldOptions {
  // for string: not empty; numeric: not zero; bytes: not nil; map: not nil
  optional bool require = 74600;
  optional string eq = 74601;         // equal to
  optional string ne = 74602;         // not equal to
  optional uint32 lt = 74603;         // less then
  optional uint32 le = 74604;         // less than or equal to
  optional uint32 gt = 74605;         // greater than
  optional uint32 ge = 74606;         // greater than or equal to
  optional uint32 max_cap = 74607;    // capacity by slice/map/bytes
  optional uint32 min_cap = 74608;    // capacity by slice/map/bytes
  optional bool cst_datetime = 74609; // 2006-01-02 15:04:05
  optional bool cst_minute = 74610;   // 2006-01-02 15:04
  optional bool cn_mobile = 74611;    // 10000000000
  optional bool cst_day = 74612;      // 2006-01-02
}
